--- a/docs/_posts/2022-8-19-day1.markdown
+++ b/docs/_posts/2022-8-19-day1.markdown
@@ -5,7 +5,7 @@ date:   2022-08-19 21:30:23 -0700
 categories: 100Days
 ---
 
-## Paper Trader
+### Paper Trader
 
 1. Tried to set a custom height and width for a React Chart.Js component but that led to the component to change size infinitely. Although the final version of this component will need to be a smaller size, I decided having it be displayed at all is enough for now. I assume the issue may be caused by React losing control of the component, but will need digging deeper in the future.
 
