--- a/docs/_posts/2022-8-23-day5.markdown
+++ b/docs/_posts/2022-8-23-day5.markdown
@@ -26,13 +26,13 @@ app.use(cors());
 
 ### Learnings
 **Discord OAuth Redirect**
-1. When I initially brought over my Discord OAuth test code, I didn't update the API token URL for the `redirect_uri` parameter. This led to some confusion as all the configs and URLs I'm interacting was expected to work as there weren't any changes. However, this [Stack Overflow](https://stackoverflow.com/a/70280164) turned up. As such, once I updated the `redirect_uri` parameter to be the same for both `authorize` and `token` Discord API routes, my `axios` requests started to succeed again.
+1. When I initially brought over my Discord OAuth test code, I didn't update the API token URL for the `redirect_uri` parameter. This led to some confusion as all the configs and URLs I'm interacting with was expected to work as there weren't any changes. However, this [Stack Overflow discussion](https://stackoverflow.com/a/70280164) turned up. As such, once I updated the `redirect_uri` parameter to be the same for both `authorize` and `token` Discord API routes, my `axios` requests started to succeed again.
 
 **Typescript and CORS**
 1. While adding the npm package `cors` to my app, turns out that isn't enough for Typescript. With [cors and Typescript](https://www.twilio.com/blog/add-cors-support-express-typescript-api), one also needs to install `@types/cors`.
 
 **dotenv in ES6**
-1. I tried to utilize `dotenv` like I had in my past `express` applications, but in ES6 it's a little different. Not that big of a difference, but much more consistent with the rest of my module imports.
+1. I tried to utilize `dotenv` like I had in my past `express` applications, but in ES6 it's a little different. 
 {%highlight javascript%}
 // The way I'm used to
 require("dotenv").config();
