--- a/docs/_posts/2022-8-24-day6.markdown
+++ b/docs/_posts/2022-8-24-day6.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "6/100 Days of Code"
 date:   2022-08-24 15:30:23 -0700
 categories: 100Days
+comments: true
 ---
 
 ### Paper Trader
