--- a/docs/_posts/2022-8-19-day1.markdown
+++ b/docs/_posts/2022-8-19-day1.markdown
@@ -6,7 +6,7 @@ categories: 100Days
 ---
 
 ### Paper Trader
-
+**ChartJS**
 1. Tried to set a custom height and width for a React Chart.Js component but that led to the component to change size infinitely. Although the final version of this component will need to be a smaller size, I decided having it be displayed at all is enough for now. I assume the issue may be caused by React losing control of the component, but will need digging deeper in the future.
 
     {% highlight typescript %}
@@ -20,8 +20,8 @@ categories: 100Days
 
 ![Infinitely growing line component](../../../../images/20220819chartjs.gif)
 
-{:start="2"}
-2. Started working on implementing the Discord OAuth API for users to log in. Originally I spent some time trying to wrap my head around properly separating out the frontend function to call the server to reach the Discord API. However, decided to push forward with trying to get the OAuth to work before refactoring the code structure to have better separation of concerns. Using this [guide](https://discordjs.guide/oauth2/#a-quick-example), I started to add the starting structure for the Discord OAuth API:
+**Discord OAuth**
+1. Started working on implementing the Discord OAuth API for users to log in. Originally I spent some time trying to wrap my head around properly separating out the frontend function to call the server to reach the Discord API. However, decided to push forward with trying to get the OAuth to work before refactoring the code structure to have better separation of concerns. Using this [guide](https://discordjs.guide/oauth2/#a-quick-example), I started to add the starting structure for the Discord OAuth API:
 
  {% highlight typescript %}
 app.get('/login', async (req, res) => {
