Fix some typos and wording

--- a/docs/_posts/2022-8-28-day10.markdown
+++ b/docs/_posts/2022-8-28-day10.markdown
@@ -18,7 +18,7 @@ comments: true
 
 1. **Researching and Planning vs Jumping In**
     - When I initially set out to implement the Discord OAuth flow for logging in, I skimmed the documentation and jumped to using their **Authorization Code Grant** flow. This led to constant back and forth of checking the documentation, writing code, encountering an error, checking the documentation again, then deleting the code I wrote. After spending a frustrating few hours of wondering why it wasn't working, I decided to sit down and read through the documentation and the example that I was trying to follow. In doing so, I realized that what I was doing was only half of what I needed, and the first half of the documentation going over **Implicit Grant** flow had information and code that I also needed for **Authorization Code Grant** flow to work ([discussed on Day 1](https://samau3.github.io/dev-blog/100days/2022/08/19/day1.html)).
-    - There are times when just jumping around the documentation and picking out code chunks that you need will work. However, this didn't work for me this time was because it was a new process I never worked with before. The lesson here is to implement documentation examples whenever working with something new. Also, differentiating between entire processes (OAuth flow) and just one function (a `ChartJS` component or an `axios` request) will help decide how through the documentation should be read before starting. 
+    - There are times when just jumping around the documentation and picking out code chunks that you need will work. However, this time that didn't work for me because OAuth was a process I never worked with before. The lesson here is to try to implement documentation examples whenever possible if working with something new. Also, differentiating between entire processes (OAuth flow) and just one function (a `ChartJS` component or an `axios` request) will help decide how thorough the documentation should be read before starting. 
     <p align="center">
         <img src="https://i.redd.it/2z08tsdqms011.jpg" alt="Read documentation for a few minutes or read Stack Overflow for 2 hours" width="50%">
         <br>
@@ -28,7 +28,7 @@ comments: true
     </p>
 2. **Getting things done vs preparing for future features**
     - This one is pretty straightforward if one codes with reusability and separation of concerns in mind. However, when focused on just making sure things work to begin with, that's when it gets unclear. While I was working on making components and routes for the Discord OAuth, I found myself not writing code and trying to plan around how to make sure my code isn't too messy. However, without a clear idea of how it should work yet this led to going in circles about how to write something.
-    - This led me to my process of making sure it all works and then refactor to clean up my functions and moving variables out into different files. However, since I knew I had to make those changes as I was writing my code, I made it easy to pull out and separate those pieces of code. As I gain more experience reading others' code and how to write different functions, this process will come more quickly as I can see how things should be broken down earlier. I had a glimpse of that, but given my long refactoring process, there is still plenty to learn and work towards. 
+    - To overcome this, I changed my approach and started to make sure I could get code that works, and then refactor to clean up my functions and moving things out into different files. However, since I knew I had to make those changes as I was writing my code, I made it easy to pull out and separate those pieces of code. As I gain more experience reading others' code and how to write different functions, this process will come more quickly as I can better plan out how things should be broken down earlier. I had a glimpse of that, but given my long refactoring process, there is still plenty to learn and work towards. 
     - As I continue with this project, I imagine the refactoring process will go smoother, not necessarily faster. Especially since I have more code to refer back to on how to approach something along with my old projects. I'll be keeping an eye on my refactoring process throughout [this journey](https://samau3.github.io/dev-blog/).
 
 ### Next Steps
