--- a/docs/_posts/2022-8-30-day12.markdown
+++ b/docs/_posts/2022-8-30-day12.markdown
@@ -37,11 +37,11 @@ comments: true
         ~~~
         name: Clean up GitHub environment
         uses: strumwolf/delete-deployment-environment@v2
-        if: ${{ github.event.action == 'closed' }}
+        if: ${{"{{ github.event.action == 'closed'" }} }}
         with:
           # ⚠️ The provided token needs permission for admin write:org
-          token: ${{ secrets.GITHUB_TOKEN }}
-          environment: pr-${{ github.event.number }}
+          token: ${{"{{ secrets.GITHUB_TOKEN" }} }}
+          environment: pr-${{ "{{ github.event.number" }} }}
         ~~~
     - So I created a new token that does have `admin write:org` permissions!
 6. Unfortunately, after getting passed the permissions error, a new one popped up 
