--- a/docs/_posts/2022-10-7-day48.markdown
+++ b/docs/_posts/2022-10-7-day48.markdown
@@ -27,6 +27,8 @@ Finally got to try out my CI/CD once again for Fly.io.
     - Searching up this issue directly did not yield any relevant results, but given the error was tied to removing my `Procfile`, I looked up Fly.io's documentation about it.
 3. After trying the [suggested changes](https://community.fly.io/t/procfile-documentation/1169) to my `fly.toml` to make up for not having a `Procfile` anymore, my deployment still failed.
     - Based on the [discussion I saw](https://community.fly.io/t/procfile-confusion/4225/6), I'm not the only one with this issue and the solution was to just use a `Procfile` again.
+4. Finally done! Except attempting the login process for the deployed app led to an error again...
+    - Taking a quick look at the logs, and given the fact that his app has been deleted and relaunched several times, I needed to update the secrets so it can actually communicate with the APIs I'm using.
 
 
 ### Leetcode
